--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav">
-            <div class="logo">Bili99 Casino</div>
+            <div class="logo">Winzonow</div>
             <div class="nav-links">
                 <a href="#" class="nav-link">Home</a>
                 <a href="#" class="nav-link">Games</a>
@@ -554,7 +554,7 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
-                <h1>Welcome to Bili99 Casino</h1>
+                <h1>Welcome to Winzonow</h1>
                 <p>Experience the thrill of premium gaming with over 2000+ games and massive jackpots waiting for you!</p>
                 
                 <div class="welcome-bonus">
