--- a/index.html
+++ b/index.html
@@ -1,1 +1,188 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>winzonow</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0b1d47;
+      color: white;
+    }
+
+    header {
+      background: #163ea3;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+    }
+
+    header h1 {
+      color: #ffcc00;
+      margin: 0;
+    }
+
+    .btn {
+      padding: 8px 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .signup {
+      background: #ffcc00;
+      color: black;
+    }
+
+    .login {
+      background: #f0f0f0;
+      color: black;
+    }
+
+    .layout {
+      display: flex;
+    }
+
+    aside {
+      width: 220px;
+      background: #09132d;
+      padding: 20px;
+    }
+
+    aside h2 {
+      font-size: 16px;
+      margin-bottom: 12px;
+      border-bottom: 1px solid #2e4a7b;
+      padding-bottom: 6px;
+    }
+
+    aside ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    aside li {
+      margin: 8px 0;
+      cursor: pointer;
+    }
+
+    main {
+      flex: 1;
+      padding: 20px;
+    }
+
+    h2.section-title {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+
+    .games {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      gap: 20px;
+    }
+
+    .game-card {
+      background: #163ea3;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
+    }
+
+    .game-card:hover {
+      transform: scale(1.05);
+    }
+
+    .game-card img {
+      width: 100%;
+      height: 140px;
+      object-fit: cover;
+    }
+
+    .game-card .title {
+      text-align: center;
+      padding: 10px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <h1>BILI99</h1>
+    <div>
+      <button class="btn signup">Signup</button>
+      <button class="btn login">Login</button>
+    </div>
+  </header>
+
+  <!-- Layout -->
+  <div class="layout">
+    <!-- Sidebar -->
+    <aside>
+      <h2>Others</h2>
+      <ul>
+        <li>TP T20</li>
+        <li>TP 1 DAY</li>
+        <li>Poker</li>
+        <li>Baccarat</li>
+        <li>Roulette</li>
+        <li>Andar Bahar</li>
+        <li>Blackjack</li>
+      </ul>
+    </aside>
+
+    <!-- Main -->
+    <main>
+      <h2 class="section-title">New Launch</h2>
+      <div class="games">
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Mines" alt="Mines">
+          <div class="title">Mines</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Aviator" alt="Aviator">
+          <div class="title">Aviator</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Pick+3" alt="Pick 3">
+          <div class="title">Pick 3</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Sky+Fall" alt="Sky Fall">
+          <div class="title">Sky Fall</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Teen+Patti" alt="Teen Patti">
+          <div class="title">Teen Patti</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Roulette" alt="Roulette">
+          <div class="title">Roulette</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Duck+Racing" alt="Duck Racing">
+          <div class="title">Duck Racing</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=Blackjack" alt="Blackjack">
+          <div class="title">Blackjack</div>
+        </div>
+        <div class="game-card">
+          <img src="https://via.placeholder.com/400x200?text=RPS" alt="Rock Paper Scissors">
+          <div class="title">Rock Paper Scissors</div>
+        </div>
+      </div>
+    </main>
+  </div>
+
+</body>
+</html>
 
