--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
   <!-- Header -->
   <header>
-    <h1>BILI99</h1>
+    <h1>winzonow</h1>
     <div>
       <button class="btn signup">Signup</button>
       <button class="btn login">Login</button>
