--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>winzonow</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>BILI99</title>
   <style>
     body {
       margin: 0;
@@ -45,6 +45,7 @@
 
     .layout {
       display: flex;
+      flex-wrap: wrap;
     }
 
     aside {
@@ -114,18 +115,15 @@
 </head>
 <body>
 
-  <!-- Header -->
   <header>
-    <h1>winzonow</h1>
+    <h1>BILI99</h1>
     <div>
       <button class="btn signup">Signup</button>
       <button class="btn login">Login</button>
     </div>
   </header>
 
-  <!-- Layout -->
   <div class="layout">
-    <!-- Sidebar -->
     <aside>
       <h2>Others</h2>
       <ul>
@@ -139,50 +137,41 @@
       </ul>
     </aside>
 
-    <!-- Main -->
     <main>
       <h2 class="section-title">New Launch</h2>
       <div class="games">
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Mines" alt="Mines">
+          <img src="https://via.placeholder.com/400x200?text=Mines" alt="Mines" />
           <div class="title">Mines</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Aviator" alt="Aviator">
-          <div class="title">Aviator</div>
+          <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDF8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzE&ixlib=rb-4.0.3&q=80&w=400" alt="Game 1" />
+          <div class="title">Game 1</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Pick+3" alt="Pick 3">
-          <div class="title">Pick 3</div>
+          <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDJ8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzE&ixlib=rb-4.0.3&q=80&w=400" alt="Game 2" />
+          <div class="title">Game 2</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Sky+Fall" alt="Sky Fall">
-          <div class="title">Sky Fall</div>
+          <img src="https://images.unsplash.com/photo-1598302603600-85769820aa48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDN8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 3" />
+          <div class="title">Game 3</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Teen+Patti" alt="Teen Patti">
-          <div class="title">Teen Patti</div>
+          <img src="https://images.unsplash.com/photo-1571029956293-159e4195a53c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDl8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 4" />
+          <div class="title">Game 4</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Roulette" alt="Roulette">
-          <div class="title">Roulette</div>
+          <img src="https://images.unsplash.com/photo-1587614382346-4ecb8e7769f1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDR8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 5" />
+          <div class="title">Game 5</div>
         </div>
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Duck+Racing" alt="Duck Racing">
-          <div class="title">Duck Racing</div>
+          <img src="https://images.unsplash.com/photo-1604079625133-7ed3b5828d18?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDV8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 6" />
+          <div class="title">Game 6</div>
         </div>
-        <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Blackjack" alt="Blackjack">
-          <div class="title">Blackjack</div>
-        </div>
-        <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=RPS" alt="Rock Paper Scissors">
-          <div class="title">Rock Paper Scissors</div>
-        </div>
+        <!-- add more game-cards similarly -->
       </div>
     </main>
   </div>
 
 </body>
 </html>
-
