--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BILI99</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WINZONOW</title>
   <style>
     body {
       margin: 0;
@@ -115,15 +115,18 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header>
-    <h1>BILI99</h1>
+    <h1>WINZONOW</h1>
     <div>
       <button class="btn signup">Signup</button>
       <button class="btn login">Login</button>
     </div>
   </header>
 
+  <!-- Layout -->
   <div class="layout">
+    <!-- Sidebar -->
     <aside>
       <h2>Others</h2>
       <ul>
@@ -137,38 +140,46 @@
       </ul>
     </aside>
 
+    <!-- Main -->
     <main>
       <h2 class="section-title">New Launch</h2>
       <div class="games">
         <div class="game-card">
-          <img src="https://via.placeholder.com/400x200?text=Mines" alt="Mines" />
+          <img src="https://images.unsplash.com/photo-1511512578047-dfb367046420?auto=format&fit=crop&w=600&q=80" alt="Mines">
           <div class="title">Mines</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDF8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzE&ixlib=rb-4.0.3&q=80&w=400" alt="Game 1" />
-          <div class="title">Game 1</div>
+          <img src="https://images.unsplash.com/photo-1545289414-6f50d4d2e6d1?auto=format&fit=crop&w=600&q=80" alt="Aviator">
+          <div class="title">Aviator</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1568605114967-8130f3a36994?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDJ8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzE&ixlib=rb-4.0.3&q=80&w=400" alt="Game 2" />
-          <div class="title">Game 2</div>
+          <img src="https://images.unsplash.com/photo-1596797038530-1a2c92a95c8f?auto=format&fit=crop&w=600&q=80" alt="Pick 3">
+          <div class="title">Pick 3</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1598302603600-85769820aa48?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDN8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 3" />
-          <div class="title">Game 3</div>
+          <img src="https://images.unsplash.com/photo-1604079625133-7ed3b5828d18?auto=format&fit=crop&w=600&q=80" alt="Sky Fall">
+          <div class="title">Sky Fall</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1571029956293-159e4195a53c?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDl8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 4" />
-          <div class="title">Game 4</div>
+          <img src="https://images.unsplash.com/photo-1556742040-3c52d6e88c62?auto=format&fit=crop&w=600&q=80" alt="Teen Patti">
+          <div class="title">Teen Patti</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1587614382346-4ecb8e7769f1?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDR8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 5" />
-          <div class="title">Game 5</div>
+          <img src="https://images.unsplash.com/photo-1505691723518-36a1b4d9032d?auto=format&fit=crop&w=600&q=80" alt="Roulette">
+          <div class="title">Roulette</div>
         </div>
         <div class="game-card">
-          <img src="https://images.unsplash.com/photo-1604079625133-7ed3b5828d18?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwyNjY3M3wwfDF8c2VhcmNofDV8fGdhbWUgc2xpZH18fHx8fDE2OTYwMjQ5MzF8&ixlib=rb-4.0.3&q=80&w=400" alt="Game 6" />
-          <div class="title">Game 6</div>
+          <img src="https://images.unsplash.com/photo-1564485374300-427f6a7d4a40?auto=format&fit=crop&w=600&q=80" alt="Duck Racing">
+          <div class="title">Duck Racing</div>
         </div>
-        <!-- add more game-cards similarly -->
+        <div class="game-card">
+          <img src="https://images.unsplash.com/photo-1621361365424-8c66b6b6bbff?auto=format&fit=crop&w=600&q=80" alt="Blackjack">
+          <div class="title">Blackjack</div>
+        </div>
+        <div class="game-card">
+          <img src="https://images.unsplash.com/photo-1529400971008-f566de0e6dfc?auto=format&fit=crop&w=600&q=80" alt="Rock Paper Scissors">
+          <div class="title">Rock Paper Scissors</div>
+        </div>
       </div>
     </main>
   </div>
