--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: bold;
+      margin-left: 10px;
     }
 
     .signup {
@@ -52,6 +53,7 @@
       width: 220px;
       background: #09132d;
       padding: 20px;
+      min-height: 100vh;
     }
 
     aside h2 {
@@ -84,7 +86,7 @@
 
     .games {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
       gap: 20px;
     }
 
@@ -94,6 +96,9 @@
       overflow: hidden;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       transition: transform 0.2s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     .game-card:hover {
@@ -110,6 +115,7 @@
       text-align: center;
       padding: 10px;
       font-weight: bold;
+      background: #163ea3;
     }
   </style>
 </head>
